; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath6kl/extr_wmi.c_ath6kl_wmi_set_bitrate_mask.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath6kl/extr_wmi.c_ath6kl_wmi_set_bitrate_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wmi = type { %struct.ath6kl* }
%struct.ath6kl = type { i32 }
%struct.cfg80211_bitrate_mask = type { i32 }

@ATH6KL_FW_CAPABILITY_64BIT_RATES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ath6kl_wmi_set_bitrate_mask(%struct.wmi* %0, i32 %1, %struct.cfg80211_bitrate_mask* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.wmi*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.cfg80211_bitrate_mask*, align 8
  %8 = alloca %struct.ath6kl*, align 8
  store %struct.wmi* %0, %struct.wmi** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.cfg80211_bitrate_mask* %2, %struct.cfg80211_bitrate_mask** %7, align 8
  %9 = load %struct.wmi*, %struct.wmi** %5, align 8
  %10 = getelementptr inbounds %struct.wmi, %struct.wmi* %9, i32 0, i32 0
  %11 = load %struct.ath6kl*, %struct.ath6kl** %10, align 8
  store %struct.ath6kl* %11, %struct.ath6kl** %8, align 8
  %12 = load i32, i32* @ATH6KL_FW_CAPABILITY_64BIT_RATES, align 4
  %13 = load %struct.ath6kl*, %struct.ath6kl** %8, align 8
  %14 = getelementptr inbounds %struct.ath6kl, %struct.ath6kl* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @test_bit(i32 %12, i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %3
  %19 = load %struct.wmi*, %struct.wmi** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = load %struct.cfg80211_bitrate_mask*, %struct.cfg80211_bitrate_mask** %7, align 8
  %22 = call i32 @ath6kl_set_bitrate_mask64(%struct.wmi* %19, i32 %20, %struct.cfg80211_bitrate_mask* %21)
  store i32 %22, i32* %4, align 4
  br label %28

23:                                               ; preds = %3
  %24 = load %struct.wmi*, %struct.wmi** %5, align 8
  %25 = load i32, i32* %6, align 4
  %26 = load %struct.cfg80211_bitrate_mask*, %struct.cfg80211_bitrate_mask** %7, align 8
  %27 = call i32 @ath6kl_set_bitrate_mask32(%struct.wmi* %24, i32 %25, %struct.cfg80211_bitrate_mask* %26)
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %23, %18
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i64 @test_bit(i32, i32) #1

declare dso_local i32 @ath6kl_set_bitrate_mask64(%struct.wmi*, i32, %struct.cfg80211_bitrate_mask*) #1

declare dso_local i32 @ath6kl_set_bitrate_mask32(%struct.wmi*, i32, %struct.cfg80211_bitrate_mask*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
